# aura

./: .apm-consumer.yml  .apm-lock.json  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  start-aura.bat
.claude/: launch.json
.githooks/: pre-commit
.github/: copilot-instructions.md  copilot-project-instructions.md
.github/agents/: analysis-agent.agent.md  architecture-governance.agent.md  bmad-orchestrator.agent.md  bug-fixer.agent.md  implementer.agent.md  mity-blog-writer.agent.md  modernization-agent.agent.md  (+5 more)
apps/aura-brain/: Dockerfile  pyproject.toml
apps/aura-brain/src/aura_brain/: __init__.py  ambient.py  avatar.py  brain_transfer.py  capabilities_api.py  characters.py  computer_use.py  conversation_manager.py  demo_persona.py  embodiment.py  knowledge_api.py  logs_api.py  main.py  maintenance.py  mood.py  perception.py  person_memory.py  pptx_watcher.py  presentation_api.py  proactive.py  realtime_session.py  realtime_voice.py  recognition_api.py  recognition_gallery.py  robot_api.py  robot_client.py  robot_events.py  scenario_store.py  setup_api.py  sightings.py  skills_api.py  source_ingest.py  stepup_gate.py  streaming.py  turn_trace.py  voice.py  voice_api.py  voice_loop.py  wakeword.py  wizard.py
apps/aura-brain/tests/: test_ambient.py  test_avatar.py  test_brain_transfer.py  test_capabilities.py  test_computer_use.py  test_conversation_manager.py  test_demo_persona.py  test_embodiment_plan.py  test_integration.py  test_knowledge_api.py  test_logs_api.py  test_maintenance.py  test_mood.py  test_perception.py  test_person_memory.py  test_pptx_watcher.py  test_prefs.py  test_presentation_api.py  test_proactive.py  test_realtime_session.py  test_realtime_voice.py  test_recognition_gallery.py  test_robot_api.py  test_robot_client.py  test_scaffold.py  test_scenario_store.py  test_security.py  test_setup_and_embodiment.py  test_setup_wizard_api.py  test_sightings.py  test_skills_api.py  test_smoke.py  test_source_ingest.py  test_stepup_gate.py  test_streaming_voice.py  test_turn_trace.py  test_voice_engine_per_persona.py  test_voice_loop.py  test_voice_plausible.py  test_wakeword.py  (+1 more)
docs/: agentic-plan.md  conversation_diagnosis.md  desktop-v1-plan.md  gebruikershandleiding.md  implementation-backlog.md  latency-baseline.md  phase-1-design.md  presentation-mode-proposal.md  reshape-plan.md  setup-guide.md  user-guide.md
infra/: robot-runtime.service  two-host-bringup.md
personas/: dry_tech_butler.json  friendly_assistant.json  kids_companion.json  quiet_mode.json  workshop_coach.json
scripts/: apm-install.ps1  privacy_scan.py  test_privacy_scan.py
services/connector-service/: Dockerfile  README.md  pyproject.toml
services/connector-service/src/connector_service/: __init__.py  browser.py  main.py  music.py  registry.py  routes.py
services/connector-service/src/connector_service/connectors/: __init__.py  errors.py  github.py  google.py  mcp_generic.py  mock.py  slack.py  workiq.py
services/connector-service/tests/: test_browser.py  test_mock_connector.py  test_music.py  test_routes.py  test_token_fetcher_seam.py  test_workiq_connector.py
services/conversation-runtime/: Dockerfile  README.md  pyproject.toml
services/conversation-runtime/src/conversation_runtime/: __init__.py  main.py  realtime.py  routes.py  session_manager.py
services/conversation-runtime/src/conversation_runtime/providers/: __init__.py  local_provider.py  null_provider.py  openai_provider.py
services/conversation-runtime/tests/: test_realtime.py  test_session.py  test_text_turn.py
services/identity-service/: Dockerfile  README.md  pyproject.toml
services/identity-service/src/identity_service/: __init__.py  auth_github.py  auth_google.py  auth_microsoft.py  defaults.py  main.py  token_store.py
services/memory-service/: Dockerfile  README.md  pyproject.toml
services/memory-service/src/memory_service/: __init__.py  main.py  routes.py  scheduler.py  store.py
services/memory-service/src/memory_service/db/: __init__.py  models.py  session.py
services/memory-service/tests/: test_routes.py  test_store.py
services/orchestrator/: Dockerfile  README.md  pyproject.toml
services/orchestrator/src/orchestrator/: __init__.py  approval_manager.py  builtin_skills.py  config.py  context_builder.py  dev_agent.py  fallback_agent.py  gateway.py  heartbeat.py  hooks.py  intent_router.py  laptop_tools.py  llm.py  main.py  offline_queue.py  persona_manager.py  pipeline.py  presentation.py  routes.py  scenario_runner.py  skill_optimizer.py  skills.py  tool_schemas.py  webhook_dispatcher.py
services/orchestrator/tests/: conftest.py  test_agentic_loop.py  test_approval.py  test_approval_memory.py  test_builtin_skills.py  test_conversation_memory.py  test_dev_agent.py  test_fallback_agent.py  test_gateway.py  test_heartbeat.py  test_hooks_subagents.py  test_intent_router.py  test_laptop_tools.py  test_latency.py  test_launch_app.py  test_llm_config.py  test_media_control.py  test_offline_queue.py  test_offline_tier.py  test_parallel_tools.py  test_pipeline.py  test_presentation.py  test_presentation_copilot.py  test_scenario_dryrun.py  test_scenario_runner.py  test_self_training.py  test_skill_optimizer.py  test_skills.py  test_tool_calling.py
services/robot-runtime/: Dockerfile  README.md  pyproject.toml
services/robot-runtime/src/robot_runtime/: __init__.py  budget_guard.py  main.py  offline_loop.py  routes.py
services/robot-runtime/src/robot_runtime/adapters/: __init__.py  fake.py  reachy.py
services/robot-runtime/src/robot_runtime/behavior/: __init__.py  states.py  timeline_builder.py
services/robot-runtime/src/robot_runtime/engine/: __init__.py  behavior.py
services/robot-runtime/tests/: test_behavior_engine.py  test_body_follow.py  test_budget_guard.py  test_camera_route.py  test_fake_adapter.py  test_offline_loop.py  test_persona_configs.py  test_reachy_adapter.py  test_reachy_live.py  test_speak_audio.py  test_timeline_builder.py
skills/: .builtin-seeded.json  README.md
spikes/voice-latency/: README.md  harness.py  pyproject.toml
(+170 files in other folders)
