[project]
name = "reachy-chief-of-staff"
version = "0.1.0"
description = "AURA — Adaptive Unified Robotic Assistant"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/shared-schemas",
    "packages/shared-events",
    "packages/shared-config",
    "packages/shared-policies",
    "packages/shared-personas",
    "packages/shared-prompts",
    "services/robot-runtime",
    "services/conversation-runtime",
    "services/orchestrator",
    "services/connector-service",
    "services/memory-service",
    "services/identity-service",
    "apps/aura-brain",
]

[tool.uv.sources]
shared-schemas  = { workspace = true }
shared-events   = { workspace = true }
shared-config   = { workspace = true }
shared-policies = { workspace = true }
shared-personas = { workspace = true }
shared-prompts  = { workspace = true }
robot-runtime        = { workspace = true }
orchestrator         = { workspace = true }
conversation-runtime = { workspace = true }
connector-service    = { workspace = true }
memory-service       = { workspace = true }
identity-service     = { workspace = true }

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
# U168: 120, not 100 — the codebase's comment-heavy style (rationale comments
# on nearly every block) routinely runs 100-115 chars; 100 flagged 111 lines
# of prose, not code problems.
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    # UP042 wants `class X(str, Enum)` → StrEnum, but that CHANGES runtime
    # behaviour (str(member) drops the class prefix) — not a lint-driven edit.
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
# Tests may set env (LLM_PROVIDER=echo etc.) before imports — that ordering
# is the point, not an accident.
"**/tests/*" = ["E402"]
