[project]
name = "aura-brain"
version = "0.1.0"
description = "AURA brain — the laptop-side process that merges orchestrator, conversation, connector, memory, and identity (ADR-007 / Phase 1)"
requires-python = ">=3.11"
dependencies = [
    # shared libraries
    "shared-schemas",
    "shared-events",
    "shared-config",
    "shared-policies",
    "shared-personas",
    "shared-prompts",
    # the five merged services, imported as libraries (their routers/modules are
    # mounted by aura_brain.main; their standalone FastAPI apps are not used)
    "orchestrator",
    "conversation-runtime",
    "connector-service",
    "memory-service",
    "identity-service",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    # U36e: multipart uploads for the voice-turn endpoint
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    # test-only: the brain↔robot contract test (U13) runs robot-runtime (FakeRobot)
    # in-process. NOT a runtime dependency — robot-runtime is a separate deployable.
    "robot-runtime",
]
# Real face recognition (U18): uv sync --package aura-brain --extra recognition
recognition = [
    "insightface>=0.7",
    "onnxruntime>=1.18",
    "pillow>=10.0",
    "numpy>=1.26",
]
# Hand-gesture reactions (U36e): uv sync --package aura-brain --extra gestures
gestures = [
    "mediapipe>=0.10.14",
    "pillow>=10.0",
    "numpy>=1.26",
]
# Gated Computer Use (U50): uv sync --package aura-brain --extra computeruse
# Anthropic's computer-use tool (screenshots + mouse/keyboard control). OFF by
# default; needs an ANTHROPIC_API_KEY at runtime.
computeruse = [
    "anthropic>=0.40",
    "pyautogui>=0.9.54",
    "pillow>=10.0",
]

[project.scripts]
aura-brain = "aura_brain.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aura_brain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
