[project]
name = "connector-service"
version = "0.1.0"
description = "AURA connector service — MockM365Connector and WorkIQConnector (MSAL OBO)"
requires-python = ">=3.11"
dependencies = [
    "shared-schemas",
    "shared-events",
    "shared-config",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "msal>=1.28",
    "keyring>=25.0",
    "keyrings.cryptfile>=1.3",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[project.scripts]
connector-service = "connector_service.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connector_service"]
