[project]
name = "conversation-runtime"
version = "0.1.0"
description = "AURA conversation runtime — STT/TTS providers, session manager, REST/WS API"
requires-python = ">=3.11"
dependencies = [
    "shared-schemas",
    "shared-events",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[project.scripts]
conversation-runtime = "conversation_runtime.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conversation_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
