[project]
name = "identity-service"
version = "0.1.0"
description = "AURA identity service — persona state, user identity stub"
requires-python = ">=3.11"
dependencies = [
    "shared-schemas",
    "shared-personas",
    "shared-config",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "msal>=1.28",
    "keyring>=25.0",
    "keyrings.cryptfile>=1.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
identity-service = "identity_service.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/identity_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
