[project]
name = "memory-service"
version = "0.1.0"
description = "AURA memory service — SQLite conversation store + reminder scheduler"
requires-python = ">=3.11"
dependencies = [
    "shared-schemas",
    "shared-events",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
memory-service = "memory_service.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
