[project]
name = "orchestrator"
version = "0.1.0"
description = "AURA orchestrator — IntentRouter, ApprovalManager, ContextBuilder"
requires-python = ">=3.11"
dependencies = [
    "shared-schemas",
    "shared-events",
    "shared-policies",
    "shared-personas",
    "shared-prompts",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "openai>=1.30",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[project.scripts]
orchestrator = "orchestrator.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
