[project]
name = "robot-runtime"
version = "0.1.0"
description = "AURA robot-runtime service — FakeRobotAdapter, BehaviorEngine, REST/WS API"
requires-python = ">=3.11"
dependencies = [
    "shared-schemas",
    "shared-events",
    "shared-personas",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
# The real robot (U16): uv sync --package robot-runtime --extra reachy
reachy = [
    "reachy-mini>=1.9",
]

[project.scripts]
robot-runtime = "robot_runtime.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robot_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
